ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
   kubernetes.io/ingress.class: nginx
   cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: cloud.<domain-name>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: game-app
              port:
                number: 80
      
  tls:
      - hosts:
          - cloud.<domain-name>
        secretName: tls-secret
